<resources>
    <string name="app_name">WeatherAndroid</string>

    <!--    Login screen-->
    <string name="sign_in_sign_up">Sign in / Sign up</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with">or login with</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <!--    Facebook-->
    <string name="facebook_app_id">744178116083202</string>
    <string name="fb_login_protocol_scheme">fb744178116083202</string>

    <!--    Bottom Menu-->
    <string name="forecast">Forecast</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>

    <!--    Map screen-->
    <string name="city_name_sample">📍 Munich, Bayern</string>
    <string name="date_sample">December 18.12.2019</string>

    <!--    Twitter-->
    <string name="twitter_api_key" translatable="false">vkuSEp0mMdmCiOIAvSQLrKfM2</string>
    <string name="twitter_api_secret" translatable="false">mXBMgDXxOUPy1SwiFlSf4JYJTsDCzG9aRoCf5vE8rJs1Z9X9rK</string>

    <!--    Forecast-->
    <string name="weather_description_sample">Clear sky</string>
    <string name="temperature_sample">25 ˚C</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="temp_sample">30 ˚C</string>
    <string name="humidity_sample">50 %</string>
    <string name="precipitation_sample">20 %</string>
    <string name="wind_sample">SW 11 mps</string>
    <string name="first_day_sample">Tuesday</string>
    <string name="second_day_sample">Wednesday</string>
    <string name="third_day_sample">Thursday</string>
    <string name="munich">Munich</string>
    <string name="buy">Buy</string>
    <string name="change_location"><b>Change location</b></string>
    <string name="change_stickers_pack"><b>Change stickers pack</b></string>
    <string name="change_unit"><b>Change unit</b></string>
    <string name="celsius">˚C</string>
    <string name="fahrenheit">˚F</string>
    <string name="change_account_info"><b>Change account info</b></string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="password">Password</string>

    <string name="location_with_emoji">📍 %1$s</string>
    <string name="temperature_in_celsius">%d ˚C</string>
    <string name="humidity_percents">%d \%%</string>
    <string name="wind_in_kph">%1$s %2$d kph</string>
    <string name="show_price_in_usd">$ %.2f</string>

    <string name="default_location">Minsk, Belarus</string>
    <string name="login_failed">Login failed</string>
    <string name="loading_failed">Loading failed</string>
    <string name="facebook_cancel">Cancel</string>
    <string name="facebook_error">Error</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="city_not_found">City not found</string>
    <string name="data_updated">Data updated!</string>
    <string name="saving_failed">Saving failed!</string>
    <string name="purchase_succeed">Purchase succeed!</string>

</resources>
